# Cryptographic-algorithms

./: CMakeLists.txt  README.md
src/: Algorithms.cpp  Algorithms.h  BigInteger.cpp  BigInteger.h  ElGamalEncryption.cpp  ElGamalEncryption.h  EllypticPoint.cpp  EllypticPoint.h  ex.txt  main.cpp
